package io.slc.jsm.slc_interpreter;

public interface Loader
{
    Runtime load(final String... args);
}
