package io.slc.jsm.slc_runtime;

import io.slc.jsm.slc_interpreter.runtime.Loader;
import io.slc.jsm.slc_interpreter.runtime.Runtime;

class SlcLoader implements Loader
{
    @Override
    public Runtime load(final String... args)
    {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}
