package io.slc.jsm.slc_runtime;

public class VirtualMachine
{
    public int readRegister(final Register register)
    {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}
