@startuml "SLC Runtime design"

package slc_interpreter.runtime {
    interface Runtime
    interface Loader
    class ExecutionResult
}

package slc_runtime {
    class SlcRuntime
    class SlcLoader

    package virtual_machine {
        class VirtualMachine
    }

    package instruction_set {
        interface InstructionSet
        interface Instruction

        InstructionSet "1" *--> "1..*" Instruction
        Instruction --> VirtualMachine : runs on
        Instruction --> ExecutionResult : produces
    }

    SlcRuntime --|> Runtime
    SlcRuntime --o VirtualMachine
    SlcRuntime --o InstructionSet
    SlcLoader --|> Loader
    SlcLoader --> SlcRuntime : creates
}

@enduml
